--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "@prisma/client": "^5.6.0",
+    "express": "^4.18.2",
+    "postgres": "^3.4.3",
+    "prisma": "^5.6.0"
+  },
+  "prisma": {}
 }
