--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # dependencies
 /node_modules
+dist/
+*.env*
 
 # misc
 .DS_Store
@@ -9,10 +11,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env
-.env*.local
 
 # typescript
 *.tsbuildinfo
