--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "author": "Takkey-713 <takiyu713@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
-    "lint": "next lint",
     "format": "prettier --write ."
   },
   "devDependencies": {
@@ -31,5 +30,7 @@
     "postgres": "^3.4.3",
     "prisma": "^5.6.0"
   },
-  "prisma": {}
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }
 }
