--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -26,6 +27,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "postgres": "^3.4.3",
     "prisma": "^5.6.0"
