fix: compileOptionsの中にbaseUrlなどがなかったので修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,11 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@globals/*": ["globals/*"]
+    }
   },
-  "baseUrl": ".",
   "include": ["./"]
 }
