--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "Takkey-713 <takiyu713@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
     "format": "prettier --write .",
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -27,9 +28,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^2.4.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.3",
     "prisma": "^5.6.0"
   },
