--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
   "author": "Takkey-713 <takiyu713@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "serve": "node dist/index.js",
+    "serve": "node dist/app.js",
     "format": "prettier --write .",
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
@@ -27,7 +30,6 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
-    "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "postgres": "^3.4.3",
