--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "baseUrl": ".",
-  "include": ["src/**/*", "prisma/seed.ts", "globals/prismadb.ts"]
+  "include": ["src/**/*"]
 }
