--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./src"
+    "forceConsistentCasingInFileNames": true
   },
+  "baseUrl": ".",
   "include": ["src/**/*"]
 }
