--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
@@ -31,9 +32,11 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "postgres": "^3.4.3",
-    "prisma": "^5.6.0"
+    "prisma": "^5.6.0",
+    "zod": "^3.22.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
